--- a/src/components/List/index.css
+++ b/src/components/List/index.css
@@ -1,4 +1,4 @@
-.List {
+.list {
     width: 100vw;
     display: flex;
     flex-direction: column;
